--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.password=root
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#JMS
+spring.artemis.host=localhost
+spring.artemis.port=61616
+spring.artemis.user=dan2021
+spring.artemis.password=dan2021
+spring.artemis.mode=native
