--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #JMS
 spring.artemis.host=localhost
 spring.artemis.port=61616
-spring.artemis.user=dan2021
-spring.artemis.password=dan2021
+spring.artemis.user=admin
+spring.artemis.password=admin
 spring.artemis.mode=native
