--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.artemis.port=61616
 spring.artemis.user=dan2021
 spring.artemis.password=dan2021
 spring.artemis.mode=native
+
+
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
