--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
