--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>utn.isi.dan.material</groupId>
 	<artifactId>dan-ms-material</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>latest</version>
 	<name>dan-ms-material</name>
 	<description> Microservicio de gestion de Materiales </description>
 	<properties>
@@ -105,6 +105,13 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
+		
+		
+				<!-- JWT handling -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
 
 
 	</dependencies>
@@ -190,7 +197,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<repository>dan/ms-material</repository>
+					<repository>criquelme05/dan-ms-material</repository>
 					<tag>${project.version}</tag>
 					<buildArgs>
 						<JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
